--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "@types/jquery": "^3.2.12",
+    "bootstrap": "4.0.0-beta",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   },
   "devDependencies": {
     "@angular/cli": "1.2.4",
