--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "git push origin master && git push heroku master"
+    "postinstall": "ng build -prod"
   },
   "private": true,
   "dependencies": {
