--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "git push origin master && git push heroku master"
-    "postinstall": "ng build -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
+    "@angular/cli": "1.2.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/cli": "1.2.4",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.14",
     "@types/jquery": "^3.2.12",
     "bootstrap": "4.0.0-beta",
+    "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.5"
+    "ngx-cookie-service": "^1.0.9",
+    "popper.js": "^1.12.5",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.2.4",
